<resources>
    <string name="app_name">Instagram Project</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>

    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_add_photos">Add Photos</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <!--posts-->
    <string name="post_like_label">%1d Likes</string>

    <!--photo-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Please try again</string>

    <!--singup-->
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="or">OR</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="name_field_hint">Enter your full name</string>
    <string name="login_with_email">Login with Email</string>
    <string name="fullname_field_empty">Fullname can\'t be empty</string>
    <string name="change_photo">Change Photo</string>
    <string name="Gallery">Choose Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="discard_changes">Discard Changes?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="logout">Logout</string>
    <string name="posts">Posts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="unable_to_load_post">Unable to load posts</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="email_address">Email Address</string>
    <string name="post">Post</string>
    <string name="upload_image_message">Uploading Image Please Wait..</string>
    <string name="saving_profile_message">Saving Profile Please Wait..</string>

    <!--settings-->
    <string name="lbl_settings">Settings</string>
    <string name="lbl_theme">Theme</string>

</resources>
