<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfile"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_marginStart="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="43dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_signup" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/logout"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblPosts"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="@+id/lblPosts"
        app:layout_goneMarginEnd="8dp" />

    <TextView
        android:id="@+id/tvPostCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cvProfile"
        app:layout_constraintTop_toTopOf="@+id/cvProfile" />

    <TextView
        android:id="@+id/lblPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/posts"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tvPostCount"
        app:layout_constraintStart_toEndOf="@+id/tvPostCount"
        app:layout_constraintTop_toTopOf="@+id/tvPostCount" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_profile_background"
        android:backgroundTint="@null"
        android:elevation="0dp"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvLogout"
        app:layout_constraintStart_toStartOf="@+id/tvPostCount"
        app:layout_constraintTop_toBottomOf="@+id/tvPostCount" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cvProfile"
        app:layout_constraintTop_toBottomOf="@+id/cvProfile"
        tools:text="Erwin Smith" />

    <TextView
        android:id="@+id/tvProfileDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEditProfile"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/tvProfileName"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileName"
        tools:text="I am xyz wirth xyz degrre living in xyz country with my xyz family under quarantineI am xyz wirth xyz degrre living in xyz country with my xyz family under quarantine" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMyPosts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
